--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!--==================== UNICONS ====================-->
-    <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css">
+    <!-- <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css"> -->
+    <link rel="stylesheet" href="https://unicons.iconscout.com/release/v3.0.0/css/line.css">
 
     <!--==================== SWIPER CSS ====================-->
     <link rel="stylesheet" href="/assets/css/swiper-bundle.min.css">
@@ -21,7 +22,7 @@
     <!--==================== HEADER ====================-->
     <header class="header" id="header">
         <nav class="nav container">
-            <a href="#" class="nav__logo">AYUSH</a>
+            <a href="#" class="nav__logo">Praditya</a>
             <div class="nav__menu" id="nav-menu">
                 <ul class="nav__list grid">
                     <li class="nav__item">
@@ -50,7 +51,7 @@
 
             <div class="nav__btns">
                 <!-- Button for Theme change -->
-                <i class="uil uil-moon change__theme" id="theme-button"></i>
+                <i class="uil change__theme uil-moon" id="theme-button"></i>
 
                 <div class="nav__toggle" id="nav-toggle">
                     <i class="uil uil-apps"></i>
@@ -73,12 +74,12 @@
                             <i class="uil uil-linkedin-alt"></i>
                         </a>
 
-                        <!-- <a href="https://www.instagram.com/" target="blank" class="home__social-icon"> -->
-                        <!-- <i class="uil uil-instagram"></i> -->
-                        <!-- </a> -->
 
                         <a href="https://github.com/thunder-source" target="blank" class="home__social-icon">
                             <i class="uil uil-github-alt"></i>
+                        </a>
+                        <a href="https://leetcode.com/majhipraditya/" target="blank" class="home__social-icon">
+                            <i class="uil uil-arrow"></i>
                         </a>
                     </div>
                     <div class="home__img">
@@ -135,17 +136,17 @@
                     <div class="about__info">
 
                         <div>
-                            <span class="about__info-title">08+</span>
-                            <span class="about__info-name">Months <br> experience</span>
+                            <span class="about__info-title">1+</span>
+                            <span class="about__info-name">Years <br> experience</span>
                         </div>
 
                         <div>
-                            <span class="about__info-title">5+</span>
+                            <span class="about__info-title">15+</span>
                             <span class="about__info-name">Completed <br> project</span>
                         </div>
 
                         <div>
-                            <span class="about__info-title">05+</span>
+                            <span class="about__info-title">10+</span>
                             <span class="about__info-name">Technologies <br> knowledge</span>
                         </div>
                     </div>
@@ -193,7 +194,7 @@
                                 <div class="skills__data">
                                     <div class="skills__titles">
                                         <h3 class="skills__name">CSS</h3>
-                                        <span class="skills__number">75%</span>
+                                        <span class="skills__number">85%</span>
                                     </div>
                                     <div class="skills__bar">
                                         <span class="skills__percentage skills__css"></span>
@@ -203,7 +204,7 @@
                                 <div class="skills__data">
                                     <div class="skills__titles">
                                         <h3 class="skills__name">JavaScript</h3>
-                                        <span class="skills__number">55%</span>
+                                        <span class="skills__number">80%</span>
                                     </div>
                                     <div class="skills__bar">
                                         <span class="skills__percentage skills__js"></span>
@@ -222,10 +223,19 @@
                                 <div class="skills__data">
                                     <div class="skills__titles">
                                         <h3 class="skills__name">React Js</h3>
-                                        <span class="skills__number">40%</span>
+                                        <span class="skills__number">70%</span>
                                     </div>
                                     <div class="skills__bar">
                                         <span class="skills__percentage skills__reactJS"></span>
+                                    </div>
+                                </div>
+                                <div class="skills__data">
+                                    <div class="skills__titles">
+                                        <h3 class="skills__name">React Native</h3>
+                                        <span class="skills__number">60%</span>
+                                    </div>
+                                    <div class="skills__bar">
+                                        <span class="skills__percentage skills__reactNative"></span>
                                     </div>
                                 </div>
                             </div>
@@ -247,20 +257,10 @@
 
                             <div class="skills__list grid">
 
-                                <!-- <div class="skills__data">
-                                        <div class="skills__titles">
-                                            <h3 class="skills__name">Node Js</h3>
-                                            <span class="skills__number">10%</span>
-                                        </div>
-                                        <div class="skills__bar">
-                                            <span class="skills__percentage skills__node"></span>
-                                        </div>
-                                    </div>   -->
-
                                 <div class="skills__data">
                                     <div class="skills__titles">
                                         <h3 class="skills__name">Java</h3>
-                                        <span class="skills__number">40%</span>
+                                        <span class="skills__number">75%</span>
                                     </div>
                                     <div class="skills__bar">
                                         <span class="skills__percentage skills__java"></span>
@@ -270,12 +270,51 @@
                                 <div class="skills__data">
                                     <div class="skills__titles">
                                         <h3 class="skills__name">DSA</h3>
-                                        <span class="skills__number">40%</span>
+                                        <span class="skills__number">70%</span>
                                     </div>
                                     <div class="skills__bar">
                                         <span class="skills__percentage skills__dsa"></span>
                                     </div>
                                 </div>
+
+                                <div class="skills__data">
+                                    <div class="skills__titles">
+                                        <h3 class="skills__name">Node Js</h3>
+                                        <span class="skills__number">45%</span>
+                                    </div>
+                                    <div class="skills__bar">
+                                        <span class="skills__percentage skills__node"></span>
+                                    </div>
+                                </div>
+                                <div class="skills__data">
+                                    <div class="skills__titles">
+                                        <h3 class="skills__name">Express Js</h3>
+                                        <span class="skills__number">45%</span>
+                                    </div>
+                                    <div class="skills__bar">
+                                        <span class="skills__percentage skills__express"></span>
+                                    </div>
+                                </div>
+                                <div class="skills__data">
+                                    <div class="skills__titles">
+                                        <h3 class="skills__name">Mongo DB</h3>
+                                        <span class="skills__number">55%</span>
+                                    </div>
+                                    <div class="skills__bar">
+                                        <span class="skills__percentage skills__mongoDB"></span>
+                                    </div>
+                                </div>
+                                <div class="skills__data">
+                                    <div class="skills__titles">
+                                        <h3 class="skills__name">My SQL</h3>
+                                        <span class="skills__number">50%</span>
+                                    </div>
+                                    <div class="skills__bar">
+                                        <span class="skills__percentage skills__mysql"></span>
+                                    </div>
+                                </div>
+
+
 
                                 <!-- <div class="skills__data">
                                         <div class="skills__titles">
@@ -418,62 +457,61 @@
 
             <div class="contact__container container grid">
                 <div>
-                    <div class="contact__information">
+                    <a href="tel:+917974544024" class="contact__information">
                         <i class="uil uil-whatsapp contact__icon"></i>
 
                         <div>
                             <h3 class="contact__title">Whatsapp me</h3>
                             <span class="contact__subtitle">7974544024</span>
                         </div>
-                    </div>
+                    </a>
 
-                    <div class="contact__information">
+                    <a href="mailto:majhipraditya@gmail.com" class="contact__information">
                         <i class="uil uil-envelope contact__icon"></i>
 
                         <div>
                             <h3 class="contact__title">Email</h3>
                             <span class="contact__subtitle">majhipraditya@gmail.com</span>
                         </div>
-                    </div>
+                    </a>
 
-                    <div class="contact__information">
+                    <a href="https://www.google.com/maps/place/Gwalior,+Madhya+Pradesh/@26.2141389,78.1208586,12z/data=!3m1!4b1!4m5!3m4!1s0x3976c5d1792291fb:0xff4fb56d65bc3adf!8m2!3d26.2124007!4d78.1772053"
+                        target="_blank" class="contact__information">
                         <i class="uil uil-map-marker contact__icon"></i>
 
                         <div>
                             <h3 class="contact__title">Location</h3>
-                            <span class="contact__subtitle">Nai sadak, Lashkar Gwalior Madhya Pradesh India</span>
+                            <span class="contact__subtitle">Gwalior Madhya Pradesh India</span>
                         </div>
-                    </div>
+                    </a>
                 </div>
-                <form action="" class="contact__form grid">
+                <form action="https://formspree.io/f/xjvzrrap" method="POST" class="contact__form grid">
 
                     <div class="contact__content">
-                        <lable class="contact__lable">Name</lable>
-                        <input type="text" class="contact__input">
+                        <label class="contact__label">Name</label>
+                        <input type="text" name="name" class="contact__input" required>
                     </div>
 
                     <div class="contact__content">
-                        <lable class="contact__lable">Email</lable>
-                        <input type="email" class="contact__input">
+                        <label class="contact__label">Email</label>
+                        <input type="email" name="email" class="contact__input" required>
                     </div>
 
                     <div class="contact__content">
-                        <lable class="contact__lable">Project</lable>
-                        <input type="text" class="contact__input">
+                        <label class="contact__label">Project</label>
+                        <input type="text" name="project" class="contact__input" required>
                     </div>
 
                     <div class="contact__content">
-                        <lable class="contact__lable">Message</lable>
-                        <textarea name="" id="" cols="0" rows="7" class="contact__input"></textarea>
+                        <label class="contact__label">Message</label>
+                        <textarea name="" id="" required name="message" cols="0" rows="7"
+                            class="contact__input"></textarea>
                     </div>
-
-
                     <div>
-                        <a href="" class="button button--flex">
+                        <button type="submit" onclick="onSubmitForm()" class="button button--flex">
                             Send Message <i class="uil uil-message button__icon"></i>
-                        </a>
+                        </button>
                     </div>
-
                 </form>
             </div>
         </section>
@@ -512,8 +550,9 @@
                         <i class="uil uil-twitter-alt"></i>
                     </a>
 
-                    <a href="https://www.facebook.com/" target="_blank" class="footer__social">
-                        <i class="uil uil-facebook-f"></i>
+                    <a href="https://www.linkedin.com/in/praditya-manjhi-0165a7211/" target="blank"
+                        class="footer__social">
+                        <i class="uil uil-linkedin-alt"></i>
                     </a>
                 </div>
             </div>
