--- a/index.html
+++ b/index.html
@@ -523,7 +523,7 @@
             <div class="footer__container container grid">
                 <div>
                     <h1 class="footer__title">Praditya</h1>
-                    <span class="footer__subtitle">Frontend developer</span>
+                    <span class="footer__subtitle">Full stack developer</span>
                 </div>
                 <ul class="footer__links">
 
