--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
                                 <div class="skills__data">
                                     <div class="skills__titles">
                                         <h3 class="skills__name">Node Js</h3>
-                                        <span class="skills__number">45%</span>
+                                        <span class="skills__number">25%</span>
                                     </div>
                                     <div class="skills__bar">
                                         <span class="skills__percentage skills__node"></span>
@@ -289,13 +289,13 @@
                                 <div class="skills__data">
                                     <div class="skills__titles">
                                         <h3 class="skills__name">Express Js</h3>
-                                        <span class="skills__number">45%</span>
+                                        <span class="skills__number">25%</span>
                                     </div>
                                     <div class="skills__bar">
                                         <span class="skills__percentage skills__express"></span>
                                     </div>
                                 </div>
-                                <div class="skills__data">
+                                <!-- <div class="skills__data">
                                     <div class="skills__titles">
                                         <h3 class="skills__name">Mongo DB</h3>
                                         <span class="skills__number">55%</span>
@@ -312,7 +312,7 @@
                                     <div class="skills__bar">
                                         <span class="skills__percentage skills__mysql"></span>
                                     </div>
-                                </div>
+                                </div> -->
 
 
 
@@ -590,6 +590,7 @@
                 el: ".swiper-pagination",
             },
         });
+
     </script>
 </body>
 
