--- a/index.html
+++ b/index.html
@@ -253,16 +253,13 @@
                         <div class="skills__content">
                             <div class="skills__header">
                                 <i class="uil uil-server-network-alt skills__icon"></i>
-
                                 <div>
                                     <h1 class="skills__titles">Backend developer</h1>
                                     <span class="skills__subtitle">Fresher 4 months experience</span>
                                 </div>
                                 <!-- <i class="uil uil-angle-down skills__arrow"></i> -->
                             </div>
-
                             <div class="skills__list grid">
-
                                 <div class="skills__data">
                                     <div class="skills__titles">
                                         <h3 class="skills__name">Java</h3>
@@ -272,7 +269,6 @@
                                         <span class="skills__percentage skills__java"></span>
                                     </div>
                                 </div>
-
                                 <div class="skills__data">
                                     <div class="skills__titles">
                                         <h3 class="skills__name">DSA</h3>
@@ -282,8 +278,7 @@
                                         <span class="skills__percentage skills__dsa"></span>
                                     </div>
                                 </div>
-
-                                <div class="skills__data">
+                                <!-- <div class="skills__data">
                                     <div class="skills__titles">
                                         <h3 class="skills__name">Node Js</h3>
                                         <span class="skills__number">25%</span>
@@ -301,7 +296,16 @@
                                         <span class="skills__percentage skills__express"></span>
                                     </div>
                                 </div>
-                                <!-- <div class="skills__data">
+                                <div class="skills__data">
+                                    <div class="skills__titles">
+                                        <h3 class="skills__name">FireBase</h3>
+                                        <span class="skills__number">25%</span>
+                                    </div>
+                                    <div class="skills__bar">
+                                        <span class="skills__percentage skills__FireBase"></span>
+                                    </div>
+                                </div>
+                                <div class="skills__data">
                                     <div class="skills__titles">
                                         <h3 class="skills__name">Mongo DB</h3>
                                         <span class="skills__number">55%</span>
@@ -319,9 +323,6 @@
                                         <span class="skills__percentage skills__mysql"></span>
                                     </div>
                                 </div> -->
-
-
-
                                 <!-- <div class="skills__data">
                                         <div class="skills__titles">
                                             <h3 class="skills__name">Python</h3>
@@ -331,12 +332,10 @@
                                             <span class="skills__percentage skills__python"></span>
                                         </div>
                                     </div> -->
-
                             </div>
                         </div>
                     </div>
                 </div>
-
             </div>
         </section>
         <!--==================== PROJECTS ====================-->
@@ -453,8 +452,6 @@
                 </div>
             </div>
         </section>
-
-
 
         <!--==================== CONTACT ME ====================-->
         <section class="contact section" id="contact">
