--- a/index.html
+++ b/index.html
@@ -350,11 +350,11 @@
                             <div class="project__content grid">
                                 <img src="/assets/img/projects/undraw_hamburger_-8-ge6.svg" alt="" class="project__img">
                                 <div class="project__data">
-                                    <h3 class="project__title">EasyMeals Website</h3>
+                                    <h3 class="project__title">Quick Bites</h3>
                                     <p class="project__decription">
                                         Single page website for meals description
                                     </p>
-                                    <a href="https://amazing-poincare-5e2f15.netlify.app" target="_"
+                                    <a href="https://quick-bites.netlify.app" target="_"
                                         class="button button--flex button--small project__button">
                                         check it out
                                         <i class="uil uil-arrow-right button__icon"></i>
